--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   google_maps_flutter: ^2.1.1
   geolocator: ^8.2.0
   geocoding: any
+  webview_flutter: ^3.0.4
+  html: 
 
 
 dev_dependencies:
@@ -84,6 +86,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - images/
+     - asset/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
